# copper-oxide-dft

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: design-reviewer.md  security-reviewer.md  test-reviewer.md
.github/workflows/: lint.yml  tests.yml
configs/: converged.json
docs/: dgx-spark-ml-install.md  getting-started.md  ground_truths.md  implementation-plan.md  local-workstation.md  machine-learned-dft.md  ml-gcgo-pivot.md  project.md  startup-cuo-cu-nonaqueous.md
scripts/: finetune_mace.sh
src/copper_oxide_dft/: __init__.py  analysis.py  che.py  cli.py  config.py  convergence.py  environ.py  neb.py  parse.py  pourbaix.py  qe_input.py  structure_builder.py  submit.py
src/copper_oxide_dft/ml/: __init__.py  box_sampling.py  curate.py  ensemble.py  fcp_rerank.py  gcga.py  qe_driver.py  sld.py  validate.py
tests/: test_analysis.py  test_che.py  test_cli.py  test_config.py  test_convergence.py  test_environ.py  test_ml_box_sampling.py  test_ml_curate.py  test_ml_ensemble.py  test_ml_fcp_rerank.py  test_ml_gcga.py  test_ml_qe_driver.py  test_ml_sld.py  test_ml_validate.py  test_neb.py  test_parse.py  test_pourbaix.py  test_qe_input.py  test_structure_builder.py  test_submit.py
