[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copper-oxide-dft"
version = "0.1.0"
description = "DFT pipeline for Cu oxide on Cu surfaces under applied electrochemical potential (Quantum ESPRESSO)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Mathieu Doucet", email = "doucetm@ornl.gov"}
]
keywords = ["dft", "quantum-espresso", "copper-oxide", "electrochemistry", "ase"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

# Core dependencies
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "ase>=3.22.0",
    "pymatgen>=2024.1.1",
    "click>=8.1.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

# Extras for AIMD and advanced workflows (later phases)
md = [
    "scipy>=1.11.0",
]

# MLIP-GCGO pipeline (see docs/ml-gcgo-pivot.md).
# Heavy deps; install via `pip install -e ".[ml]"` only on the DGX Spark workstation.
# torch / mace-torch / dscribe / umap-learn / h5py are aarch64-compatible but
# CUDA wheels for Blackwell may need the NVHPC SDK in PATH at install time.
# ase-ga is the GA backend (replaced GOCIA on 2026-05-19; see
# docs/ground_truths.md). It is the maintained spin-out of ASE's built-in
# `ase.ga` module by the same DTU/CAMD team.
ml = [
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "h5py>=3.10.0",
    "dscribe>=2.1.0",
    "umap-learn>=0.5.5",
    "torch>=2.2.0",
    "mace-torch>=0.3.6",
    "ase-ga>=1.0",
]

# Documentation
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

# All optional dependencies
all = [
    "copper-oxide-dft[dev,md,docs]",
]

[project.scripts]
copper-oxide-dft = "copper_oxide_dft.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
copper_oxide_dft = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/copper_oxide_dft",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex (let developers decide)
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = [
    "ARG",    # Unused function arguments in tests are OK (fixtures)
    "S101",   # Assert statements are OK in tests
]

[tool.ruff.lint.isort]
known-first-party = ["copper_oxide_dft"]

# Black configuration (code formatting)
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter type checking
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
